fix: corrigido issues de nivel critico e medio